--- a/index.html
+++ b/index.html
@@ -1063,6 +1063,321 @@
       </div>
     </section>
 
+    <!-- TRAJECTORY OUTPUT CAROUSEL SECTION -->
+    <section class="section" id="trajectories">
+      <div class="container is-max-widescreen">
+        <h2 class="title is-3 has-text-centered">Agent Trajectory Outputs</h2>
+        <p class="has-text-centered mb-5">
+          We visualize the navigation behavior of each embodied agent using
+          synchronized <strong>egocentric</strong> and
+          <strong>top-down</strong> trajectory GIFs.
+        </p>
+
+        <div id="trajectory-carousel" class="carousel results-carousel">
+          <!-- GPT-4o -->
+          <div class="item">
+            <div class="box">
+              <h4 class="title is-4 has-text-centered">GPT-4o</h4>
+              <div class="columns is-vcentered">
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/gpt-4o/fp.gif"
+                      alt="GPT-4o egocentric trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Egocentric View</strong>
+                  </p>
+                </div>
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/gpt-4o/minimap.gif"
+                      alt="GPT-4o top-down trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Top-Down View</strong>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- GPT-5-mini (gpt-5-image-mini folder) -->
+          <div class="item">
+            <div class="box">
+              <h4 class="title is-4 has-text-centered">GPT-5-mini</h4>
+              <div class="columns is-vcentered">
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/gpt-5-image-mini/fp.gif"
+                      alt="GPT-5-mini egocentric trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Egocentric View</strong>
+                  </p>
+                </div>
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/gpt-5-image-mini/minimap.gif"
+                      alt="GPT-5-mini top-down trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Top-Down View</strong>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Claude-Haiku-4.5 -->
+          <div class="item">
+            <div class="box">
+              <h4 class="title is-4 has-text-centered">Claude-Haiku-4.5</h4>
+              <div class="columns is-vcentered">
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/claude-haiku-4.5/fp.gif"
+                      alt="Claude-Haiku-4.5 egocentric trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Egocentric View</strong>
+                  </p>
+                </div>
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/claude-haiku-4.5/minimap.gif"
+                      alt="Claude-Haiku-4.5 top-down trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Top-Down View</strong>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Claude-Sonnet-4.5 -->
+          <div class="item">
+            <div class="box">
+              <h4 class="title is-4 has-text-centered">Claude-Sonnet-4.5</h4>
+              <div class="columns is-vcentered">
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/claude-sonnet-4.5/fp.gif"
+                      alt="Claude-Sonnet-4.5 egocentric trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Egocentric View</strong>
+                  </p>
+                </div>
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/claude-sonnet-4.5/minimap.gif"
+                      alt="Claude-Sonnet-4.5 top-down trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Top-Down View</strong>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Gemini-2.5-flash -->
+          <div class="item">
+            <div class="box">
+              <h4 class="title is-4 has-text-centered">Gemini-2.5-flash</h4>
+              <div class="columns is-vcentered">
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/gemini-2.5-flash/fp.gif"
+                      alt="Gemini-2.5-flash egocentric trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Egocentric View</strong>
+                  </p>
+                </div>
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/gemini-2.5-flash/minimap.gif"
+                      alt="Gemini-2.5-flash top-down trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Top-Down View</strong>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Qwen3-VL-8B-Instruct -->
+          <div class="item">
+            <div class="box">
+              <h4 class="title is-4 has-text-centered">Qwen3-VL-8B-Instruct</h4>
+              <div class="columns is-vcentered">
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/qwen3-vl-8b-instruct/fp.gif"
+                      alt="Qwen3-VL-8B-Instruct egocentric trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Egocentric View</strong>
+                  </p>
+                </div>
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/qwen3-vl-8b-instruct/minimap.gif"
+                      alt="Qwen3-VL-8B-Instruct top-down trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Top-Down View</strong>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Qwen3-VL-30B-A3B-Instruct -->
+          <div class="item">
+            <div class="box">
+              <h4 class="title is-4 has-text-centered">
+                Qwen3-VL-30B-A3B-Instruct
+              </h4>
+              <div class="columns is-vcentered">
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/qwen3-vl-30b-a3b-instruct/fp.gif"
+                      alt="Qwen3-VL-30B-A3B-Instruct egocentric trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Egocentric View</strong>
+                  </p>
+                </div>
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/qwen3-vl-30b-a3b-instruct/minimap.gif"
+                      alt="Qwen3-VL-30B-A3B-Instruct top-down trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Top-Down View</strong>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- LLaMA-4-Scout -->
+          <div class="item">
+            <div class="box">
+              <h4 class="title is-4 has-text-centered">LLaMA-4-Scout</h4>
+              <div class="columns is-vcentered">
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/llama-4-scout/fp.gif"
+                      alt="LLaMA-4-Scout egocentric trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Egocentric View</strong>
+                  </p>
+                </div>
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/llama-4-scout/minimap.gif"
+                      alt="LLaMA-4-Scout top-down trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Top-Down View</strong>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Nemotron-nano-12B-v2-VL:Free -->
+          <div class="item">
+            <div class="box">
+              <h4 class="title is-4 has-text-centered">
+                Nemotron-nano-12B-v2-VL
+              </h4>
+              <div class="columns is-vcentered">
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/nemotron-nano-12b-v2-vl:free/fp.gif"
+                      alt="Nemotron-nano-12B-v2-VL egocentric trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Egocentric View</strong>
+                  </p>
+                </div>
+                <div class="column is-6">
+                  <figure class="image">
+                    <img
+                      class="trajectory-gif"
+                      src="./static/images/GIF/nemotron-nano-12b-v2-vl:free/minimap.gif"
+                      alt="Nemotron-nano-12B-v2-VL top-down trajectory"
+                    />
+                  </figure>
+                  <p class="has-text-centered mt-2">
+                    <strong>Top-Down View</strong>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="section" id="BibTeX">
       <div class="container is-max-widescreen content">
         <h2 class="title is-3 has-text-centered">BibTeX</h2>
